# geo_toolbox

./: DEVELOPMENT.md  README.md  eedata.py  experiment.ipynb  main.py  processors.py  pyproject.toml  requirements-dev.txt  requirments.txt  visualizer.py
docs/: API.md
example_data/input/: farm1.gpkg
examples/notebooks/: experiment.ipynb
src/geo_toolbox/: __init__.py
src/geo_toolbox/core/: __init__.py  eedata.py  filter.py
src/geo_toolbox/processing/: __init__.py  processors.py
src/geo_toolbox/visualization/: __init__.py  visualizer.py
tests/: test_processors.py
