[project]
name = "geo-toolbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "earthengine-api>=1.7.22",
    "geemap>=0.37.2",
    "geopandas>=1.1.3",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "nbformat>=5.10.4",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "plotly>=6.7.0",
    "rasterio>=1.5.0",
    "scipy>=1.17.1",
]
