[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geo-toolbox"
version = "0.1.0"
description = "Geospatial data extraction and analysis toolkit powered by Google Earth Engine"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Biswajit Das", email = "bdas05373@gmail.com"}
]
keywords = ["geospatial", "earth-engine", "sentinel", "ndvi", "raster"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "earthengine-api>=1.7.22",
    "geemap>=0.37.2",
    "geopandas>=1.1.3",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "plotly>=6.7.0",
    "rasterio>=1.5.0",
    "scipy>=1.17.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]
notebooks = [
    "ipykernel>=7.2.0",
    "jupyter>=1.0",
    "nbformat>=5.10.4",
]

[project.urls]
Homepage = "https://github.com/yourusername/geo-toolbox"
Documentation = "https://geo-toolbox.readthedocs.io"
Repository = "https://github.com/yourusername/geo-toolbox.git"
"Bug Tracker" = "https://github.com/yourusername/geo-toolbox/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
